
2008-04-25  Lynn Garren

	* cleanup examples: combine example_MyPythia.cc, example_MyPythiaRead.cc,
	example_MyPythiaWithEventSelection.cc, example_PythiaParticle.cc, and
	example_ReadMyPythia.cc into one example with multiple subsets.

2008-04-23  Lynn Garren

	* src/GenVertex.cc: fix bug in edge_iterator operator++
        * src/IO_Ascii.cc: fix for VC9
        * src/IO_ExtendedAscii.cc: fix for VC9
        * src/IO_AsciiParticle.cc: fix for VC9

2008-04-18  Lynn Garren

	* HepMC/GenEvent.h: minor bug fix for gcc 4.3.0
	* HepMC/IO_ExtendedAscii.h: minor bug fix for gcc 4.3.0
	* HepMC/IO_GenEvent.h: minor bug fix for gcc 4.3.0
	* src/IO_ExtendedAscii.cc: minor bug fix for gcc 4.3.0
	* src/IO_GenEvent.cc: minor bug fix for gcc 4.3.0

2008-04-18  Lynn Garren

	* ReadMe.cygwin: changing cygwin directions for new versions of VC

	* HepMC/MomentumUnits.h: enum HepMCmomentumUnits{ UNKNOWN = 0, MEV, GEV };
	Recommended usage: MomentumUnits::GEV
	* HepMC/PositionUnits.h: enum HepMCpositionUnits{ unknown = 0, MM, CM } 
	Recommended usage: PositionUnits::MM

2008-04-17  Lynn Garren

	* Rename configure.in to configure.ac, which is now the common usage.
	* configure.ac: Major restructuring.  Using libtool. 
	Only Linux, MacOSX, and Windows are explicitly supported.
	All Makefile.am's have been restructured to use libtool.

2008-04-01  Lynn Garren


	* HepMC/IO_GenEvent.h: replace const char* filename with 
	  const std::string& in the constructor accepting a filename.

2008-03-31  Lynn Garren

	* HepMC/GenEvent.h: random_states() now returns const std::vector<long>&
	  HepMC/GenVertex.h: position() now returns a const FourVector&
	  HepMC/GenParticle.h: flow() now returns const Flow&
	  and polarization() now returns const Polarization&

	* HepMC/IO_GenEvent.h: add a constructor that accepts the filename
	  as a string.

2008-03-28  Lynn Garren

	* HepMC/GenParticle.h: The momentum() method now returns a const
	  reference to a FourVector instead of a copy of a FourVector.