@@ -129,7 +129,7 @@ RECURSIVE              = YES
 EXCLUDE                = ../doc
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = 
-EXAMPLE_PATH           = ../examples
+EXAMPLE_PATH           = ../examples ../test
 EXAMPLE_PATTERNS       = 
 EXAMPLE_RECURSIVE      = NO
 IMAGE_PATH             = 
